--- a/src/site/apt/source.apt.vm
+++ b/src/site/apt/source.apt.vm
@@ -2,3 +2,6 @@ Source Code
 
  The source code of this project is available at Github:
  {{https://github.com/e-Contract/ethereum-resource-adapter/}}
+
+ Issues can be reported at:
+ {{https://github.com/e-Contract/ethereum-resource-adapter/issues}}
