--- a/src/site/apt/demo.apt.vm
+++ b/src/site/apt/demo.apt.vm
@@ -5,7 +5,7 @@ Demo Web Application
  Start a <<<geth>>> Ethereum client node in development mode via:
 
 +--
-geth --dev --http --http.api personal,eth,net,web3 --dev.period 0 --ws --ws.origins '*' --allow-insecure-unlock
+geth --dev --http --http.api eth,net,web3 --dev.period 0 --ws --ws.origins '*'
 +--
 
 * WildFly
